# ilink-llm-bridge

./: .gitignore  README.md  config.example.yaml  login.py  pyproject.toml  requirements.txt  wechat-ilink-llm-bridge-guide.md
src/: main.py
src/bridge/: chunker.py  handler.py  loop.py
src/cdn/: pic_decrypt.py
src/config/: loader.py  types.py
src/history/: manager.py
src/ilink/: api.py  credentials.py  outbound.py  session_guard.py  types.py
src/llm/: registry.py  types.py
src/llm/providers/: claude.py  dify.py  gemini.py  openai_compat.py
src/util/: logger.py  redact.py
